PatientScheduleService: adjust time-slot pipeline to use Objects::nonNull and Collectors.toList(); when no available slots are returned, fall back to DoctorScheduleSlot to build a sorted/distinct list so patients still see options from the doctor's configuration.